Updated with Fellow Statisticians feedback form

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -242,68 +242,68 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 
 ## Block 4: Linear Regression
 
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| Lesson  | Topic                                                | BEFORE Class                                                                                                                    | AFTER Class  | Graded Events (due dates)            |
-+=========+======================================================+=================================================================================================================================+==============+======================================+
-| 29      | Linear Regression and Correlation                    | -   READ:                                                                                                                       | -   GPset 29 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |     -   Chapter 7 Linear regression with a single predictor from *Introduction to Modern Statistics (2e)*                       |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |         -   Beginning of the chapter through the end of Section 7.2                                                             |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |         -   SKIP Section 7.1.3 Residuals                                                                                        |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |         -   SKIP Section 7.2.4-7.2.5                                                                                            |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   [Reading Guide for Lesson 29](https://notebooklm.google.com/notebook/5c4013fc-79f7-4c55-b7b7-80be8186dbf1){target="_blank"} |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 30      | Residuals and Plots                                  | -   READ:                                                                                                                       | -   GPset 30 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |     -   Chapter 7 Linear regression with a single predictor from *Introduction to Modern Statistics (2e)*                       |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |         -   Sections 7.1.3, 7.2.4, and 7.2.5                                                                                    |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      |         -   Sections 7.3 and 7.4                                                                                                |              |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 30                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 31      | Train-Test Paradigm                                  | -   READ:                                                                                                                       | -   GPset 31 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 31                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 32      | Multiple Regression (parallel slopes)                | -   READ:                                                                                                                       | -   GPset 32 | -   HW7                              |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 32                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 33      | Multiple Regression (interaction, Simpson's paradox) | -   READ:                                                                                                                       | -   GPset 33 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 33                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 34      | Interpretation of Regression Tables                  | -   READ:                                                                                                                       | -   GPset 34 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 34                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 35      | Multiple testing, p-hacking                          | -   READ:                                                                                                                       | -   GPset 35 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 35                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 36      | Central Limit Theorem                                | -   READ:                                                                                                                       | -   GPset 36 |                                      |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 36                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 37      | t-tests                                              | -   READ:                                                                                                                       | -   GPset 37 | -   HW8                              |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 37                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 38      | GR4                                                  | Study! Practice!                                                                                                                | Relax!       |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 39      | ANOVA                                                | -   READ:                                                                                                                       | -   GPset 39 | -   Group Task #4 - Final Submission |
-|         |                                                      |                                                                                                                                 |              |                                      |
-|         |                                                      | -   Reading Guide for Lesson 39                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-| 40      | Chi-squared tests                                    | -   READ:                                                                                                                       | -   GPset 40 | -   Strengths Activity               |
-|         |                                                      |                                                                                                                                 |              | -   Post-course AI questionnaire     |
-|         |                                                      | -   Reading Guide for Lesson 40                                                                                                 |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
-|         |                                                      | FINAL EXAM                                                                                                                      |              |                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------------+
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| Lesson  | Topic                                                | BEFORE Class                                                                                                                    | AFTER Class  | Graded Events (due dates)                                                                                            |
++=========+======================================================+=================================================================================================================================+==============+======================================================================================================================+
+| 29      | Linear Regression and Correlation                    | -   READ:                                                                                                                       | -   GPset 29 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |     -   Chapter 7 Linear regression with a single predictor from *Introduction to Modern Statistics (2e)*                       |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |         -   Beginning of the chapter through the end of Section 7.2                                                             |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |         -   SKIP Section 7.1.3 Residuals                                                                                        |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |         -   SKIP Section 7.2.4-7.2.5                                                                                            |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   [Reading Guide for Lesson 29](https://notebooklm.google.com/notebook/5c4013fc-79f7-4c55-b7b7-80be8186dbf1){target="_blank"} |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 30      | Residuals and Plots                                  | -   READ:                                                                                                                       | -   GPset 30 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |     -   Chapter 7 Linear regression with a single predictor from *Introduction to Modern Statistics (2e)*                       |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |         -   Sections 7.1.3, 7.2.4, and 7.2.5                                                                                    |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      |         -   Sections 7.3 and 7.4                                                                                                |              |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 30                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 31      | Train-Test Paradigm                                  | -   READ:                                                                                                                       | -   GPset 31 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 31                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 32      | Multiple Regression (parallel slopes)                | -   READ:                                                                                                                       | -   GPset 32 | -   HW7                                                                                                              |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 32                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 33      | Multiple Regression (interaction, Simpson's paradox) | -   READ:                                                                                                                       | -   GPset 33 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 33                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 34      | Interpretation of Regression Tables                  | -   READ:                                                                                                                       | -   GPset 34 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 34                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 35      | Multiple testing, p-hacking                          | -   READ:                                                                                                                       | -   GPset 35 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 35                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 36      | Central Limit Theorem                                | -   READ:                                                                                                                       | -   GPset 36 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 36                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 37      | t-tests                                              | -   READ:                                                                                                                       | -   GPset 37 | -   HW8                                                                                                              |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 37                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 38      | GR4                                                  | Study! Practice!                                                                                                                | Relax!       |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 39      | ANOVA                                                | -   READ:                                                                                                                       | -   GPset 39 | -   Group Task #4 - Final Submission                                                                                 |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   Reading Guide for Lesson 39                                                                                                 |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 40      | Chi-squared tests                                    | -   READ:                                                                                                                       | -   GPset 40 | -   [Feedback to Fellow Statistics form](https://forms.office.com/r/UFqBD0Y3nT){target="_blank"} (opens 19 November) |
+|         |                                                      |                                                                                                                                 |              | -   Strengths Activity                                                                                               |
+|         |                                                      | -   Reading Guide for Lesson 40                                                                                                 |              | -   Post-course AI questionnaire                                                                                     |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+|         |                                                      | FINAL EXAM                                                                                                                      |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
